Fix ApiKeys command on Firefox (#1061)
It's quite hard to allow copying of this command
But current code allow safe selection of this command

--- a/app/assets/stylesheets/apiKeys.css.scss
+++ b/app/assets/stylesheets/apiKeys.css.scss
@@ -1,4 +1,4 @@
 #api-keys {
-  user-select: auto;
+  user-select: all;
   white-space: pre-line;
 }
